--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "antd": "^4.17.2",
+    "create-react-class": "^15.7.0",
     "lodash": "^4.17.21",
     "normalize.css": "^4.0.0",
     "randomcolor": "^0.4.4",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-tappable": "^1.0.4",
@@ -21,6 +22,7 @@
     "redux-thunk": "^2.4.1",
     "store": "^2.0.4",
     "store.js": "^1.0.4",
+    "video-react": "^0.15.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
